fix errors and images

--- a/index.html
+++ b/index.html
@@ -11,20 +11,14 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
 </head>
 
 <body>
   <main>
-    <!-- loader -->
-    <div id="overlay">
-      <div id="progstat"></div>
-      <div id="progress"></div>
-      <div class="flex"><img id="loader" src="images/rocket.svg" /></div>
-    </div>
      <h1 id="headline" class="thomas">Thomas Standing</h1>
   </main>
 
@@ -62,267 +56,7 @@
       <img src="images/postgresicon.png" id="postgres">
       <img src="images/rubyicon.png" id="ruby">
     </div>
-    <br>
-    <p>Check out some of my projects below.</p>
   </div>
-<!-- End About me -->
-
-  <div id="main">
-
-  <!-- rhlwco -->
-  <div class="project-container parallax" id="project3">
-    <div class="content-container">
-      <img class="slide-up" id="rhlw" src="images/rhlw.png">
-      <p class="slide-up">Online shopping platform built for RH Leather Works based out of Austin, Texas.</p>
-    </div>
-    <div class="image-container">
-      <img src="images/hands.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="project-img">
-      <img src="images/wallet.jpg" alt="">
-
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
-          <a href="http://rhlwco.com" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/hands.jpg" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="http://rhlwco.com" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
-      <a href="http://rhlwco.com/" target="_blank">visit site</a>
-    </div>
-  </div>
-  <!-- End rhlwco -->
-
-  <!-- jordanstanding -->
-  <div class="project-container parallax" id="project3">
-    <div class="content-container">
-      <img class="slide-up" id="js" src="images/name.png">
-      <p class="slide-up">Fashion Designer Portfolio</p>
-    </div>
-    <div class="image-container">
-      <img src="images/worktable.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="project-img">
-      <img src="images/PNicon.jpg" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
-          <a href="http://jordanstanding.com" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/worktable.jpg" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="http://jordanstanding.com" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
-      <a href="http://jordanstanding.com" target="_blank">visit site</a>
-    </div>
-  </div>
-<!-- End jordanstanding -->
-
-
-<!-- Upick -->
-  <div class="project-container parallax" id="project3">
-    <div class="content-container">
-      <img class="slide-up" id="upick" src="images/upicklogo.png">
-      <p class="slide-up">Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
-    </div>
-    <div class="image-container">
-      <img src="images/upickunsplash.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="project-img">
-      <img src="images/upickhp.png" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-          <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/upickunsplash.jpg" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="http://upick-app.herokuapp.com/" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-      <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
-    </div>
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>React | Node.js</p>
-      <p class='details'>Express | Webpack</p>
-      <p class='details'>Eventful API</p>
-    </div>
-  </div>
-  <!-- End Upick -->
-
-  <!-- Last Call -->
-  <div class="project-container parallax" id="project3">
-    <div class="content-container">
-      <h1 class="slide-up">Last Call</h1>
-      <p class="slide-up">Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and will only display one choice at a time allowing for users to save their favorite bars they find to their favorites list and more!</p>
-    </div>
-    <div class="image-container">
-      <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="project-img">
-      <img src="images/LastCallUnsplash.jpg" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-          <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/lastcallhp.png" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-      <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
-    </div>
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>React | Node.js</p>
-      <p class='details'>Yelp Fusion API | Webpack</p>
-      <p class='details'>PostgreSQL</p>
-    </div>
-  </div>
-  <!-- End Last Call -->
-
-
-  <!-- Wikipedia -->
-  <div class="project-container parallax" id="project2">
-    <div class="content-container">
-      <h1 class="slide-up">Wiki-pedia</h1>
-      <p class="slide-up">My version of the world renowned online encyclopedia using Node.js and Express. Full crud-ability, the user is able to create, edit and delete posts as they wish and are created using markdown as text with the Marked npm package.</p>
-    </div>
-    <div class="image-container">
-      <img src="images/wiki_background.jpg" alt="https://pixabay.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project2-info">
-    <div class="project-img">
-      <img src="images/Wiki.png" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Wikipedia-Clone" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Wikipedia-Clone" target="_blank">github</a>
-          <a href="https://wiki-pedia.herokuapp.com/wiki" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/Wiki2.png" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="https://wiki-pedia.herokuapp.com/wiki" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Wikipedia-Clone" target="_blank">github</a>
-      <a href="https://wiki-pedia.herokuapp.com/wiki" target="_blank">visit site</a>
-    </div>
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>Handlebars.js | Bootstrap</p>
-      <p class='details'>Node.js | Express</p>
-      <p class='details'>PostegreSQL</p>
-    </div>
-  </div>
-  <!-- End Wikipedia -->
-
-  <!-- Simon -->
-  <div class="project-container parallax" id="project1">
-    <div class="content-container" id="content1">
-      <h1>Simon</h1>
-      <p>My spin on the classic electronic memory game Simon</p>
-    </div>
-    <div class="image-container">
-      <img src="images/Simon.jpg" alt="https://pixabay.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project1-info">
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>HTML/CSS</p>
-      <p class='details'>Javascript</p>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
-    </div>
-
-    <div class="project-img">
-      <img src="images/Simon_UI.png" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
-          <a href="https://tomisstanding.github.io/Simon" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Simon -->
-
-  </div>
-<!-- End Main -->
 
 <!-- Footer -->
   <footer>
