--- a/index.html
+++ b/index.html
@@ -58,17 +58,31 @@
     </div>
   </div>
 
+<section class="resume" style="max-width: 80%; margin: 0 auto;">
+  <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
+  <div>
+    <h2>Macy’s — Front End Developer (April ‘18 - Present)</h2>
+    <li>Work directly with designers, advertisers, and copy writers to see each project from ideation to production</li>
+    <li>Develop and maintained several Macy’s branding and experience websites responsible for over 200 million in sales in 2019 using Node.js, Handlebars.js, jQuery, and SASS.</li>
+    <li>Help On-board new junior developers and assist management with the development of new employees</li>
+
+    <h2>  KITH, inc. — Fashion Design Company — Full Stack Developer (October ‘17 - March ‘18)</h2>
+    <li>Helped managed two off site development and marketing teams responsible for providing shopping analytics and helping with larger projects</li>
+    <li>Developed, designed, and maintained e-commerce website using Shopify Plus CMS</li>
+    <li>Designed, developed, and implemented several different UI’s for better user experience, mobile optimization, and a/b testing which led to better conversion and increased sales</li>
+
+    <h2>Debt Maven — Debt financing platform — Front End Developert (Jun ‘17 - October ‘17)</h2>
+    <li>Redesigned and rebuilt entire front end using React and Redux</li>
+    <li>Implemented responsive design for user interface on mobile devices using Bootstrap and CSS</li>
+    <li>Helped implement product management workflow using Pivotal Tracker which allowed the CTO, CEO and myself to communicated effectively and efficiently about tasks and objectives</li>
+  </div>
+</section>
+
+
+
 <!-- Footer -->
   <footer>
-    <a href="https://github.com/tomisstanding" target="_blank">
-      <img src="images/github-logo.png" alt="github-logo" id="foot-github">
-    </a>
-    <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
-      <img src="images/email-icon.png" alt="email-logo" id="email-logo">
-    </a>
-    <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
-      <img src="images/linkedin-icon.png" alt="linkedin-logo" id="linked-in">
-    </a>
+    <p><a style="color:#000; text-decoration: none;"href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">Send me an email</a></p>
   </footer>
 <!-- End Footer -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
