add lym to resume

--- a/index.html
+++ b/index.html
@@ -61,12 +61,18 @@
 <section class="resume" style="max-width: 80%; margin: 0 auto;">
   <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
   <div>
+    <h2>Love Your Melon — Web Developer & Digital Marketing Manager (September ‘20 - Present)</h2>
+    <li>Design and develop different landing pages, custom sections, and tools in Shopify using liquid, html, css, photoshop and javascript</li>
+    <li>Work alongside CEO to create digital marketing emails, and sms marketing using Klaviyo & Attentive Mobile</li>
+    <li>Optimize existing code and find different opportunites to help improve SEO, site speed, and functionality</li>
+    <li>Develop marketing flows for different segments of customers to meet and exceed different KPI's</li>
+
     <h2>Macy’s — Front End Developer (April ‘18 - Present)</h2>
     <li>Work directly with designers, advertisers, and copy writers to see each project from ideation to production</li>
     <li>Develop and maintained several Macy’s branding and experience websites responsible for over 200 million in sales in 2019 using Node.js, Handlebars.js, jQuery, and SASS.</li>
     <li>Help On-board new junior developers and assist management with the development of new employees</li>
 
-    <h2>  KITH, inc. — Fashion Design Company — Full Stack Developer (October ‘17 - March ‘18)</h2>
+    <h2>KITH, inc. — Fashion Design Company — Full Stack Developer (October ‘17 - March ‘18)</h2>
     <li>Helped managed two off site development and marketing teams responsible for providing shopping analytics and helping with larger projects</li>
     <li>Developed, designed, and maintained e-commerce website using Shopify Plus CMS</li>
     <li>Designed, developed, and implemented several different UI’s for better user experience, mobile optimization, and a/b testing which led to better conversion and increased sales</li>
