fix macys end date

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <li>Optimize existing code and find different opportunites to help improve SEO, site speed, and functionality</li>
     <li>Develop marketing flows for different segments of customers to meet and exceed different KPI's</li>
 
-    <h2>Macy’s — Front End Developer (April ‘18 - Present)</h2>
+    <h2>Macy’s — Front End Developer (April ‘18 - May '20)</h2>
     <li>Work directly with designers, advertisers, and copy writers to see each project from ideation to production</li>
     <li>Develop and maintained several Macy’s branding and experience websites responsible for over 200 million in sales in 2019 using Node.js, Handlebars.js, jQuery, and SASS.</li>
     <li>Help On-board new junior developers and assist management with the development of new employees</li>
