fix spelling error

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <section class="resume" style="max-width: 80%; margin: 0 auto;">
   <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
   <div>
-    <h2>Love Your Melon — Web Developer & Digital Marketing Manager (September ‘20 - Present)</h2>
+    <h2>Love Your Melon — E-commerce & Digital Marketing Manager (September ‘20 - Present)</h2>
     <li>Design and develop different landing pages, custom sections, and tools in Shopify using liquid, html, css, photoshop and javascript</li>
     <li>Work alongside CEO to create digital marketing emails, and sms marketing using Klaviyo & Attentive Mobile</li>
     <li>Optimize existing code and find different opportunites to help improve SEO, site speed, and functionality</li>
@@ -77,7 +77,7 @@
     <li>Developed, designed, and maintained e-commerce website using Shopify Plus CMS</li>
     <li>Designed, developed, and implemented several different UI’s for better user experience, mobile optimization, and a/b testing which led to better conversion and increased sales</li>
 
-    <h2>Debt Maven — Debt financing platform — Front End Developert (Jun ‘17 - October ‘17)</h2>
+    <h2>Debt Maven — Debt financing platform — Front End Developer (Jun ‘17 - October ‘17)</h2>
     <li>Redesigned and rebuilt entire front end using React and Redux</li>
     <li>Implemented responsive design for user interface on mobile devices using Bootstrap and CSS</li>
     <li>Helped implement product management workflow using Pivotal Tracker which allowed the CTO, CEO and myself to communicated effectively and efficiently about tasks and objectives</li>
