--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id='name' class='animated bounceInUp'>
       <div class='name1'></div>
     </div>
-    <h3 class='fsd'>— FULL STACK WEB DEVELOPER —</h3>
+    <h3 class='fsd'>— Director of Ecommerce, CRO Specialist, and Web Developer —</h3>
     <div class="icons">
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
         <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
@@ -61,16 +61,36 @@
 <section class="resume" style="max-width: 80%; margin: 0 auto;">
   <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
   <div>
-    <h2>Love Your Melon — E-commerce & Digital Marketing Manager (September ‘20 - Present)</h2>
-    <li>Design and develop different landing pages, custom sections, and tools in Shopify using liquid, html, css, photoshop and javascript</li>
-    <li>Work alongside CEO to create digital marketing emails, and sms marketing using Klaviyo & Attentive Mobile</li>
-    <li>Optimize existing code and find different opportunites to help improve SEO, site speed, and functionality</li>
-    <li>Develop marketing flows for different segments of customers to meet and exceed different KPI's</li>
+    <h2> Itzy Ritzy - Director of Ecommerce (Jan '24 - Present)</h2>
+    <li>Lead and manage all ecommerce projects on ItzyRitzy.com Shopify Plus store.</li>
+
+    <h2> Boisson - Senior Web Developer (March '23 - Jan '24)</h2>
+    <li>Manage and contribute to the development of all web projects, implementing innovative features such as a refined navigation system and
+        enhanced product searchability based on store availability. These strategic
+        implementations, validated through meticulous A/B testing, have
+        contributed to a 15% increase in conversion rate.</li>
+    <li>Manage development team, implementing robust project management and
+        development processes, which increased productivity, expedited
+        development completion time, and minimized bugs and errors.</li>
+    <li>Leverage technologies and tools such as Shopify Plus, VWO, Monday, Git &
+        Github to optimize website functionality and user engagement.</li>
+
+    <h2>Love Your Melon — E-commerce & Digital Marketing Manager (September ‘20 - March '23)</h2>
+    <li>Spearheaded development of multiple Shopify landing pages
+improving user engagement by 40%.</li>
+<li>Collaborated with the CEO to craft and execute digital marketing strategies
+via Klaviyo & Attentive Mobile, resulting in a 20% increase in customer
+retention.</li>
+<li>Managed CRO A/B tests, leading to a 33% increase in overall conversion
+rate
+Optimized code base to improve SEO, site speed, and overall site efficiency</li>
 
     <h2>Macy’s — Front End Developer (April ‘18 - May '20)</h2>
-    <li>Work directly with designers, advertisers, and copy writers to see each project from ideation to production</li>
-    <li>Develop and maintained several Macy’s branding and experience websites responsible for over 200 million in sales in 2019 using Node.js, Handlebars.js, jQuery, and SASS.</li>
-    <li>Help On-board new junior developers and assist management with the development of new employees</li>
+    <li>development and maintenance of Macy’s marketing landing web pages,
+using technologies such as Node.js, jQuery, and SASS.</li>
+<li>Collaborated with cross-functional teams from ideation to production, contributing
+to 30+ successful project launches.</li>
+<li>Mentored and onboarded four junior developers</li>
 
     <h2>KITH, inc. — Fashion Design Company — Full Stack Developer (October ‘17 - March ‘18)</h2>
     <li>Helped managed two off site development and marketing teams responsible for providing shopping analytics and helping with larger projects</li>
