--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id='name' class='animated bounceInUp'>
       <div class='name1'></div>
     </div>
-    <h3 class='fsd'>— Director of Ecommerce, CRO Specialist, and Web Developer —</h3>
+    <h3 class='fsd'>— Senior Web Developer & CRO Specialist —</h3>
     <div class="icons">
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
         <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
@@ -46,8 +46,6 @@
 <section class="resume" style="max-width: 80%; margin: 0 auto;">
   <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
   <div>
-    <h2> Itzy Ritzy - Director of Ecommerce (Jan '24 - Present)</h2>
-    <li>Lead and manage all ecommerce projects on ItzyRitzy.com Shopify Plus store.</li>
 
     <h2> Boisson - Senior Web Developer (March '23 - Jan '24)</h2>
     <li>Manage and contribute to the development of all web projects, implementing innovative features such as a refined navigation system and
