--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
   <div>
 
-    <h2> Boisson - Senior Web Developer (March '23 - Jan '24)</h2>
+    <h2> Boisson - Senior Web Developer (March '23 - present)</h2>
     <li>Manage and contribute to the development of all web projects, implementing innovative features such as a refined navigation system and
         enhanced product searchability based on store availability. These strategic
         implementations, validated through meticulous A/B testing, have
