--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id='name' class='animated bounceInUp'>
       <div class='name1'></div>
     </div>
-    <h3 class='fsd'>— Senior Web Developer & CRO Specialist —</h3>
+    <h3 class='fsd'>— Senior Web Developer | CRO Specialist | Director of Ecommerce —</h3>
     <div class="icons">
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
         <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
@@ -47,7 +47,14 @@
   <h1 style="border-bottom:1px solid #000;font-size:50px;">Experience</h1>
   <div>
 
-    <h2> Boisson - Senior Web Developer (March '23 - present)</h2>
+    <h2>Itzy Ritzy - Director of e-Commerce (Jan '24 - July '24)</h2>
+    <li>Managed Shopify store operations, including updates, conversion rate optimization, user experience, and app integrations.</li>
+<li>Developed and executed a strategic roadmap to drive revenue growth and improve conversion rate, AOV, and total revenue.</li>
+    <li>Led the development team, overseeing project management, quality assurance (QA), and implementation to ensure timely and high-quality project delivery.</li>
+<li>Directed the CRO team, guiding ideation, design, and implementation processes to enhance site performance and user engagement.</li>
+
+
+    <h2> Boisson - Senior Web Developer (March '23 - Jan '24)</h2>
     <li>Manage and contribute to the development of all web projects, implementing innovative features such as a refined navigation system and
         enhanced product searchability based on store availability. These strategic
         implementations, validated through meticulous A/B testing, have
